--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 /AUTHORS -text
 /apertium-gle.gle.dix -text
 /apertium-gle.gle.rlx -text
+/apertium-gle.pc.in -text
 dev/irishfst/COPYING -text
 dev/irishfst/Makefile -text
 dev/irishfst/README -text
