--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,15 @@
 * text=auto !eol
 /ACKNOWLEDGEMENTS -text
 /AUTHORS -text
+/ChangeLog -text
+/Makefile.am -text
+/NEWS -text
+/README -text
 /apertium-gle.gle.dix -text
 /apertium-gle.gle.rlx -text
 /apertium-gle.pc.in -text
+/autogen.sh -text
+/configure.ac -text
 dev/irishfst/COPYING -text
 dev/irishfst/Makefile -text
 dev/irishfst/README -text
