--- a/.gitattributes
+++ b/.gitattributes
@@ -121,3 +121,8 @@ dev/irishfst/src/xfst-suffixes.script -text
 dev/irishfst/src/xfst-urucaps.script -text
 dev/irishfst/test.sh -text
 dev/irishfst/test.txt -text
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
